---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 2;
  print c0_;
  ret;
}
